--- a/package.json
+++ b/package.json
@@ -14,14 +14,24 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
-    "@tiptap/extension-image": "^2.7.2",
+    "@tiptap/core": "^2.7.4",
+    "@tiptap/extension-highlight": "^2.7.4",
+    "@tiptap/extension-image": "^2.7.4",
+    "@tiptap/extension-link": "^2.7.4",
+    "@tiptap/extension-subscript": "^2.7.4",
+    "@tiptap/extension-superscript": "^2.7.4",
     "@tiptap/extension-table": "^2.7.2",
     "@tiptap/extension-table-cell": "^2.7.2",
     "@tiptap/extension-table-header": "^2.7.2",
     "@tiptap/extension-table-row": "^2.7.2",
-    "@tiptap/pm": "^2.5.7",
-    "@tiptap/react": "^2.5.7",
-    "@tiptap/starter-kit": "^2.5.7",
+    "@tiptap/extension-task-item": "^2.7.4",
+    "@tiptap/extension-task-list": "^2.7.4",
+    "@tiptap/extension-text-style": "^2.7.4",
+    "@tiptap/extension-underline": "^2.7.4",
+    "@tiptap/extension-youtube": "^2.7.4",
+    "@tiptap/pm": "^2.7.4",
+    "@tiptap/react": "^2.7.4",
+    "@tiptap/starter-kit": "^2.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.417.0",
