--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tiptap/extension-table-row": "^2.7.2",
     "@tiptap/extension-task-item": "^2.7.4",
     "@tiptap/extension-task-list": "^2.7.4",
+    "@tiptap/extension-text-align": "^2.7.4",
     "@tiptap/extension-text-style": "^2.7.4",
     "@tiptap/extension-underline": "^2.7.4",
     "@tiptap/extension-youtube": "^2.7.4",
