--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tiptap/core": "^2.7.4",
     "@tiptap/extension-highlight": "^2.7.4",
     "@tiptap/extension-image": "^2.7.4",
